# criterion-energy

./: Cargo.toml  readme.md
benches/: msr.rs
src/: lib.rs
src/msr/: callgrind.rs  coverage.rs  energyformatter.rs  measurement.rs  mod.rs  profiler.rs  util.rs
src/perf/: formatter.rs  measurement.rs  mod.rs  profiler.rs
